Small movement fix, changed attack damage logic, updated map for demo